fixed some spacing

--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@
     h1{
         font-family:'IntroRust';
         text-align: center;
-        font-size: 100px;
+        font-size: 90px;
         margin: auto;
         margin-top: 30px;
 
@@ -55,10 +55,12 @@
     .container{
         /* background-color: yellow; */
         /* padding-top: 2vh; */
-        width: 100vw;
+        width: 90vw;
         height: 100vh;
         justify-content: center;
         margin: auto;
+        max-width: 90vw;
+        text-align: center;
         
     }
     h2{
@@ -126,4 +128,7 @@
     .map{
         max-width: 80vw;
         margin: auto;
+    }
+    .mapframe{
+        max-width: 80vw;
     }
